--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,8 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
-
+<!--                gitee登录:https://gitee.com/oauth/authorize?client_id=409116a49e6f6fe4ebd28cde3041a53519203014f2ce464ff8303f6c5c950cf7&redirect_uri=http://localhost:8888/callback&response_type=code&state=1-->
+<!--                GitHub登录：https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1-->
             </ul>
         </div>
     </div>
