--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
 
-                <li class="dropdown" th:if="${session.githubUser!=null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.githubUser.getName()}"><span class="caret"></span></a>
+                <li class="dropdown" th:if="${session.user!=null}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
@@ -36,7 +36,7 @@
 
                     </ul>
                 </li>
-                <li th:if="${session.githubUser==null}"><a href="https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
+                <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
 <!--                gitee登录:https://gitee.com/oauth/authorize?client_id=409116a49e6f6fe4ebd28cde3041a53519203014f2ce464ff8303f6c5c950cf7&redirect_uri=http://localhost:8888/callback&response_type=code&state=1-->
 <!--                GitHub登录：https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1-->
             </ul>
