--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>交流社区</title>
+    <title>发布交流社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -18,12 +18,12 @@
                 <span class="sr-only">交流社区</span>
 
             </button>
-            <a class="navbar-brand" href="/">交流社区</a>
+            <a class="navbar-brand" href="#">交流社区</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索提问">
+                    <input type="text" class="form-control" placeholder="搜索问题">
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
@@ -41,8 +41,8 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
-<!--                gitee登录:https://gitee.com/oauth/authorize?client_id=409116a49e6f6fe4ebd28cde3041a53519203014f2ce464ff8303f6c5c950cf7&redirect_uri=http://localhost:8888/callback&response_type=code&state=1-->
-<!--                GitHub登录：https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1-->
+                <!--                gitee登录:https://gitee.com/oauth/authorize?client_id=409116a49e6f6fe4ebd28cde3041a53519203014f2ce464ff8303f6c5c950cf7&redirect_uri=http://localhost:8888/callback&response_type=code&state=1-->
+                <!--                GitHub登录：https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1-->
             </ul>
         </div>
     </div>
@@ -51,21 +51,38 @@
     <div class="row">
         <div class="col-lg-9 col-md-12 col-xs-12" >
 
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
+            <h2><span class="glyphicon  glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
 
-            <div class="media">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-roundedc" src="https://avatars.githubusercontent.com/u/53589456?s=400&u=75f4ecab7dd4ed0744cbb6f39cce50ecaf9660e0&v=4">
-                    </a>
+            <form action="/publish" method="post">
+                <div class="form-group">
+                    <label for="title">问题标题（简单扼要） </label>
+                    <input type="text" class="form-control"  th:value="${title}" id="title" name="title" placeholder="问题标题……">
                 </div>
-                <div class="media-body">
-                    <h4 class="media-heading">怎么快速学会spring boot开发</h4>
-                    点击进入看视频<br>
-                    <span class="text-desc">2个回复·31次浏览·1小时前</span>
+
+                <div class="form-group">
+                    <label for="description">问题补充（必须，请参照右方提示）</label>
+                    <textarea name="description" id="description" th:value="${description}" class="form-control" cols="30" rows="10"></textarea>
                 </div>
-            </div>
+
+                <div class="form-group">
+                    <label for="tag">添加标签 </label>
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签，以“，”号分隔……">
+                </div>
+
+                <div class="container-fluid main">
+                    <div class="row">
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-xs-12" th:text="${error}" th:if="${error!=null}"></div>
+                        <div class="col-lg-3 col-md-12 col-xs-12">
+                            <button type="submit" class="btn btn-success btn-publish ">发布</button>
+                        </div>
+
+
+                    </div></div>
+
+
+
+            </form>
         </div>
         <div class="col-lg-3 col-md-12 col-xs-12" >
             <h3>发起问题</h3>
@@ -76,5 +93,6 @@
 
     </div>
 </div>
+
 </body>
 </html>
