--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,16 +54,17 @@
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
 
-            <div class="media">
+            <div class="media" th:each="question:${questions}">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object img-roundedc" src="https://avatars.githubusercontent.com/u/53589456?s=400&u=75f4ecab7dd4ed0744cbb6f39cce50ecaf9660e0&v=4">
+                        <img class="media-object img-roundedc"
+                             th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading">怎么快速学会spring boot开发</h4>
-                    点击进入看视频<br>
-                    <span class="text-desc">2个回复·31次浏览·1小时前</span>
+                    <h4 class="media-heading" th:text="${question.title}">怎么快速学会spring boot开发</h4>
+                    <span th:text="${question.description}"> </span><br>
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复·<span th:text="${question.viewCount}"> </span>次浏览·<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm ')}"></span></span>
                 </div>
             </div>
         </div>
