--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -62,7 +62,7 @@
 
                 <div class="form-group">
                     <label for="description">问题补充（必须，请参照右方提示）</label>
-                    <textarea name="description" id="description" th:value="${description}" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -72,9 +72,18 @@
 
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-xs-12" th:text="${error}" th:if="${error!=null}"></div>
+                        <div class="col-lg-9 col-md-12 col-xs-12" >
+                            <div class="alert alert-danger col-lg-9 col-md-12 col-xs-12"
+                                 th:text="${error}"
+                                 th:if="${error!=null}">
+
+                            </div>
+                        </div>
+
                         <div class="col-lg-3 col-md-12 col-xs-12">
-                            <button type="submit" class="btn btn-success btn-publish ">发布</button>
+                            <button type="submit" class="btn btn-success btn-publish ">
+                                发布
+                            </button>
                         </div>
 
 
