--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -6,47 +6,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/community.min.css">
-
+    <script src="js/static/js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">交流社区</span>
-
-            </button>
-            <a class="navbar-brand" href="#">交流社区</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user!=null}">
-                    <a href="/publish">发布</a>
-                </li>
-                <li class="dropdown" th:if="${session.user!=null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">推出登录</a></li>
-
-                    </ul>
-                </li>
-                <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
-                <!--                gitee登录:https://gitee.com/oauth/authorize?client_id=409116a49e6f6fe4ebd28cde3041a53519203014f2ce464ff8303f6c5c950cf7&redirect_uri=http://localhost:8888/callback&response_type=code&state=1-->
-                <!--                GitHub登录：https://github.com/login/oauth/authorize?client_id=5ef1314640c129e68f62&redirect_uri=http://localhost:8888/callback&scope=user&state=1-->
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-xs-12" >
