--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -12,7 +12,9 @@ body{
 .media-object{
     width: 38px;
     height: 38px;
-
+}
+.media-body{
+    padding-top: 10px;
 }
 .text-desc {
     font-size: 12px;
@@ -28,4 +30,11 @@ body{
 }
 .jumbotron{
     margin: 50px;
+}
+.comment{
+    margin: 10px 0;
+}
+.btn-comment{
+    float:right;
+    margin-bottom:10px;
 }
