--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,11 +10,21 @@
     <script src="js/static/js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
+<script type="application/javascript">
+    window.onload = function () {
+        // debugger;
+        var closable = window.localStorage.getItem("closable");
+        if (closable == "true") {
+            window.close();
+            window.localStorage.removeItem("closable");
+        }
+    }
+</script>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-xs-12" >
+        <div class="col-lg-9 col-md-12 col-xs-12">
 
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
@@ -27,7 +37,7 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" >
+                    <h4 class="media-heading">
                         <a th:href="@{'question/'+${question.id}}" th:text="${question.title}"></a>
                     </h4>
                     <span th:text="${question.description}"> </span><br>
@@ -50,7 +60,7 @@
                     </li>
 
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page==page}? 'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}" >
+                        <a th:href="@{/(page=${page})}" th:text="${page}">
 
                         </a>
                     </li>
@@ -68,7 +78,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-lg-3 col-md-12 col-xs-12" >
+        <div class="col-lg-3 col-md-12 col-xs-12">
             <h3>热门话题</h3>
         </div>
     </div>
