--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -24,7 +24,11 @@ body{
 .profile .section{
     margin-top: 15px;
 }
-.menu{
+.question-title{
+    margin-top: 25px;
+}
+.comment-menu{
+    display: block;
     color: #999;
     font-size: 13px;
 }
@@ -37,4 +41,36 @@ body{
 .btn-comment{
     float:right;
     margin-bottom:10px;
+}
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+.sub-comments{
+    border-right: 5px;
+    margin-top: 15px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+}
+.sub-comments .btn{
+    margin-top: 10px ;
+}
+.comment-sp{
+    margin-top: 0;
+}
+.menu{
+    color: #999;
+    margin-top: 5px;
+}
+.menu.icon{
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu.active{
+    color: #499ef3;
+}
+.menu .icon:hover{
+    color: #499ef3;
 }
