--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -68,6 +68,14 @@ body{
     font-size: 15px;
     cursor: pointer;
 }
+.menu .comment-icon{
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .comment-iconhover{
+    color: #499ef3;
+}
+
 .menu.active{
     color: #499ef3;
 }
