--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,16 +9,18 @@
     <script src="/js/static/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
 
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main profile">
     <div class="row">
+
         <!--左边主要内容-->
-        <div class="col-lg-9 col-md-12 col-xs-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <!--正文-->
-            <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4 class="question-title"><span th:text="${question.title}"></span></h4>
                 <span class="text-desc">
                 作者： <span th:text="${question.user.name}"></span>|
@@ -26,24 +28,25 @@
                 阅读数： <span th:text="${question.viewCount}"></span>
                     <!--                ctrl+shift+↓/↑（整行上下移动）-->
             </span>
-                <hr class="col-lg-12 col-md-12 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-xs-12" th:text="${question.description}"></div>
-                <hr class="col-lg-12 col-md-12 col-xs-12">
+                <!--编辑-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header"
+                     th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <a th:href="@{'publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user !=null&&session.user.id==question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    编辑
+                   th:if="${session.user !=null && session.user.id == question.creator}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
                 </a>
             </div>
-
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        </div>
             <!--回复-->
-            <div class="col-lg-12 col-md-12 col-xs-12">
-
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>
                     <span th:text="${question.commentCount}"></span>个回复
                 </h4>
-                <hr class="col-lg-12 col-md-12 col-xs-12 comment-sp">
-                <div class="col-lg-12 col-md-12 col-xs-12 comments" th:each="comment : ${comments}">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 col-xs-12 comments" th:each="comment : ${comments}">
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
@@ -55,43 +58,28 @@
                             <h5 class="media-heading">
                                 <span th:text="${comment.user.name}"></span>
                             </h5>
-                            <div th:text="${comment.content}">我是回复内容</div>
+                            <div th:text="${comment.content}"></div>
                             <div class="menu">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                                <span class="glyphicon glyphicon-comment icon" th:data-id="${comment.id}"
-                                      onclick="collapseComments(this)"></span>
+                                <span th:data-id="${comment.id}"
+                                      onclick="collapseComments(this)" class="comment-icon">
+                                    <span class="glyphicon glyphicon-comment"></span>
+                                    <span th:text="${comment.commentCount}"></span>
+                                </span>
                                 <span class="pull-right"
-                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH')}"></span>|
+                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH')}"></span>
                             </div>
-                            <!--二级评论-->
-<!--                            <div class="col-lg-12 col-md-12 col-xs-12 collapse sub-comments"-->
-<!--                                 th:id="${'comment-'+comment.id}">-->
-<!--                                <div class="col-lg-12 col-md-12 col-xs-12 comments" th:each="comment : ${comments}">-->
-<!--                                    <div class="media">-->
-<!--                                        <div class="media-left">-->
-<!--                                            <a href="#">-->
-<!--                                                <img class="media-object img-rounded"-->
-<!--                                                     th:src="${comment.user.avatarUrl}">-->
-<!--                                            </a>-->
-<!--                                        </div>-->
-<!--                                        <div class="media-body">-->
-<!--                                            <h5 class="media-heading">-->
-<!--                                                <span th:text="${comment.user.name}"></span>-->
-<!--                                            </h5>-->
-<!--                                            <div th:text="${comment.content}">我是回复内容</div>-->
-<!--                                            <div class="menu">-->
-<!--                                                <span class="pull-right"-->
-<!--                                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH')}"></span>|-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="col-lg-12 col-md-12 col-xs-12 comments">-->
-<!--                                    <input type="text" class="form-control" placeholder="评论一下 " th:id="${'input-'+comment.id}">-->
-<!--                                    <button type="button" class="btn btn-success pull-right" onclick="comment()" th:data-id="${'input-'+comment.id}">评论</button>-->
-
-<!--                                </div>-->
-<!--                            </div>-->
+                            <!--                            二级评论-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                                 th:id="${'comment-'+comment.id}">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments">
+                                    <input type="text" class="form-control" placeholder="评论一下 "
+                                           th:id="${'input-'+comment.id}">
+                                    <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
+                                            th:data-id="${comment.id}">评论
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
