--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -28,10 +28,19 @@
                 阅读数： <span th:text="${question.viewCount}"></span>
                     <!--                ctrl+shift+↓/↑（整行上下移动）-->
             </span>
-                <!--编辑-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header"
-                     th:text="${question.description}"></div>
+<!--                内容-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header" th:text="${question.description}">th:text="${question.description}"></div>
+<!--                标签-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header" >
+
+                    <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info " th:text="${tag}">Info</span>
+                    </span>
+                </div>
+                <!--编辑-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <a th:href="@{'publish/'+${question.id}}" class="community-menu"
                    th:if="${session.user !=null && session.user.id == question.creator}">
