--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,19 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>发布交流社区</title>
+    <title>发布 - 交流社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.min.css">
     <script src="/js/static/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/commumity.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-xs-12" >
+        <div class="col-lg-9 col-md-12 col-xs-12">
 
             <h2><span class="glyphicon  glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
@@ -22,22 +23,58 @@
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要） </label>
-                    <input type="text" class="form-control"  th:value="${title}" id="title" name="title" placeholder="问题标题……">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title"
+                           placeholder="问题标题……"
+                           autocomplete="off">
                 </div>
-
                 <div class="form-group">
                     <label for="description">问题补充（必须，请参照右方提示）</label>
-                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" th:text="${description}" style="display: none;"
+                              class="form-control"
+                              cols="30"
+                              rows="10"></textarea>
                 </div>
 
                 <div class="form-group">
                     <label for="tag">添加标签 </label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签，以“，”号分隔……">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                           autocomplete="off"
+                           placeholder="输入标签，以“，”号分隔……"
+                           onclick="showSelectTag()">
+                    <div id="select-tag" class="publish-tag-tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory,selectCategoryStat:${tags}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane " th:href="${selectCategory.categoryName}"
+                                 th:each="selectCategory:${tags}">
+                                <span class="label label-info " th:each="selectTag:${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                          th:data-tag="${selectTag}"
+                                          th:text="${selectTag}">
+                                    </span>
+                                </span>
+                            </div>
+                            <div role="tabpanel" class="tab-pane" id="profile">
+                                <span class="label label-info ">
+                                    <span class="glyphicon glyphicon-tags"
+                                          onclick="selectTag('Spring')">Spring</span>
+                                </span>
+                                <span class="label label-info ">
+                                    <span class="glyphicon glyphicon-tags"
+                                          onclick="selectTag('Spring Boot')">Spring Boot</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="col-lg-9 col-md-12 col-xs-12" >
+                        <div class="col-lg-9 col-md-12 col-xs-12">
                             <div class="alert alert-danger col-lg-9 col-md-12 col-xs-12"
                                  th:text="${error}"
                                  th:if="${error!=null}">
@@ -52,13 +89,13 @@
                         </div>
 
 
-                    </div></div>
-
+                    </div>
+                </div>
 
 
             </form>
         </div>
-        <div class="col-lg-3 col-md-12 col-xs-12" >
+        <div class="col-lg-3 col-md-12 col-xs-12">
             <h3>发起问题</h3>
             问题标题：请用精简的语言描述你发布的问题，不超过25个字<br>
             问题补充：详细补充你的问题内容，并确保问题清晰直观，并提供一些相关的资料<br>
