--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -29,12 +29,13 @@
                     <!--                ctrl+shift+↓/↑（整行上下移动）-->
             </span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-<!--                内容-->
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header" th:text="${question.description}">th:text="${question.description}"></div>
-<!--                标签-->
+                <!--                内容-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header" th:text="${question.description}">
+                    th:text="${question.description}">
+                </div>
+                <!--                标签-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header" >
-
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header">
                     <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
                         <span class="glyphicon glyphicon-tags"></span>
                         <span class="label label-info " th:text="${tag}">Info</span>
@@ -42,88 +43,67 @@
                 </div>
                 <!--编辑-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <a th:href="@{'publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user !=null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
-                </a>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <a th:href="@{'publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user !=null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
+                </div>
+
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         </div>
-            <!--回复-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>
-                    <span th:text="${question.commentCount}"></span>个回复
-                </h4>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 col-xs-12 comment-sp">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 col-xs-12 comments" th:each="comment : ${comments}">
-                    <div class="media">
-                        <div class="media-left">
-                            <a href="#">
-                                <img class="media-object img-rounded"
-                                     th:src="${comment.user.avatarUrl}">
-                            </a>
-                        </div>
-                        <div class="media-body" th:id="${'comment-body-'+comment.id}">
-                            <h5 class="media-heading">
-                                <span th:text="${comment.user.name}"></span>
-                            </h5>
-                            <div th:text="${comment.content}"></div>
-                            <div class="menu">
-                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                                <span th:data-id="${comment.id}"
-                                      onclick="collapseComments(this)" class="comment-icon">
+        <!--回复-->
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>
+                <span th:text="${question.commentCount}"></span>个回复
+            </h4>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+            <div class="col-lg-12 col-md-12 col-sm-12  col-xs-12 comments" th:each="comment : ${comments}">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${comment.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body" th:id="${'comment-body-'+comment.id}">
+                        <h5 class="media-heading">
+                            <span th:text="${comment.user.name}"></span>
+                        </h5>
+                        <div th:text="${comment.content}"></div>
+                        <div class="menu">
+                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                            <span th:data-id="${comment.id}"
+                                  onclick="collapseComments(this)" class="comment-icon">
                                     <span class="glyphicon glyphicon-comment"></span>
                                     <span th:text="${comment.commentCount}"></span>
                                 </span>
-                                <span class="pull-right"
-                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH')}"></span>
-                            </div>
-                            <!--                            二级评论-->
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
-                                 th:id="${'comment-'+comment.id}">
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments">
-                                    <input type="text" class="form-control" placeholder="评论一下 "
-                                           th:id="${'input-'+comment.id}">
-                                    <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
-                                            th:data-id="${comment.id}">评论
-                                    </button>
-                                </div>
+                            <span class="pull-right"
+                                  th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH')}"></span>
+                        </div>
+                        <!--                            二级评论-->
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                             th:id="${'comment-'+comment.id}">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                                <input type="text" class="form-control" placeholder="评论一下 "
+                                       th:id="${'input-'+comment.id}">
+                                <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
+                                        th:data-id="${comment.id}">评论
+                                </button>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <!--回复输入框-->
-            <div class="col-lg-12 col-md-12 col-xs-12 comments">
-                <h4>
-                    提交回复
-                </h4>
-                <hr class="col-lg-12 col-md-12 col-xs-12 comment-sp">
-                <div class="col-lg-12 col-md-12 col-xs-12" id="comment_section">
-                    <div class="media">
-                        <div class="media-left">
-                            <a href="#">
-                                <img class="media-object img-rounded"
-                                     th:src="${question.user.avatarUrl}">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h6 class="media-heading">
-                                <span th:text="${question.user.name}"></span>
-                            </h6>
-                        </div>
-                    </div>
-                    <inpkut type="hidden" id="question_id" th:value="${question.id}"></inpkut>
-                    <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
-                    <button type="button" class="btn btn-success btn-comment" onclick="post">回复</button>
                 </div>
             </div>
         </div>
-
-        <!--右边信息块-->
-        <div class="col-lg-3 col-md-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-xs-12">
-                <h4>发起人</h4>
+        <!--回复输入框-->
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments">
+            <h4>
+                提交回复
+            </h4>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
@@ -137,13 +117,49 @@
                         </h6>
                     </div>
                 </div>
-            </div>
-            <hr class="col-lg-12 col-md-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-xs-12">
-                <h4>相关问题</h4>
+                <inpkut type="hidden" id="question_id" th:value="${question.id}"></inpkut>
+                <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                <button type="button" class="btn btn-success btn-comment" onclick="post">回复</button>
             </div>
         </div>
     </div>
+
+    <!--右边信息块-->
+    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>发起人</h4>
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded"
+                             th:src="${question.user.avatarUrl}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h6 class="media-heading">
+                        <span th:text="${question.user.name}"></span>
+                    </h6>
+                </div>
+            </div>
+        </div>
+<!--        微信号图片-->
+        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>站长微信</h4>
+            <img class="img-thumbnail question-wechat" src="/img/img.png" >
+        </div>
+<!--        相关问题-->
+        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>相关问题</h4>
+            <ul class="question-related">
+                <li th:each="related : ${relatedQuestions}">
+                    <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 </div>
 
 </body>
