--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/community.min.css">
-    <script src="/js/static/js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="/css/community.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="/js/commumity.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -27,14 +27,28 @@
                            placeholder="问题标题……"
                            autocomplete="off">
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="question-editor" style="z-index: 2">
                     <label for="description">问题补充（必须，请参照右方提示）</label>
-                    <textarea name="description" id="description" th:text="${description}" style="display: none;"
+                    <textarea name="description" id="description" th:text="${description}" style="display:none;"
                               class="form-control"
                               cols="30"
                               rows="10"></textarea>
                 </div>
-
+<!--                <script type="text/javascript">-->
+<!--                    $(function () {-->
+<!--                        var editor = editormd("question-editor", {-->
+<!--                            width: "100%",-->
+<!--                            height: 350,-->
+<!--                            path: "/js/lib/",-->
+<!--                            delay: 0,-->
+<!--                            watch: false,-->
+<!--                            placeholder: "請輸入問題描述",-->
+<!--                            imageUpload: true,-->
+<!--                            imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],-->
+<!--                            imageUploadURL: "/file/upload",-->
+<!--                        });-->
+<!--                    });-->
+<!--                </script>-->
                 <div class="form-group">
                     <label for="tag">添加标签 </label>
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
