--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,5 +17,7 @@
     <p th:text="${message}">服务器太热了，一般稍等在来试一试</p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
 </div>
+<div th:insert="~{footer::foot}"></div>
+
 </body>
 </html>
