--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,29 +47,29 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
-                        <a href="/?page=1" aria-label="Previous">
+                        <a th:href="@{/(page=1,search = ${search} )}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showPrevious}">
-                        <a href="@{/(page=${pagination.page-1})}" aria-label="Previous">
+                        <a th:href="@{/(page=${pagination.page-1},search = ${search} )}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
 
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page==page}? 'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}">
+                        <a th:href="@{/(page=${page},search = ${search})}" th:text="${page}">
 
                         </a>
                     </li>
 
                     <li th:if="${pagination.showNext}">
-                        <a href="@{/(page=${pagination.page+1})}" aria-label="Next">
+                        <a th:href="@{/(page=${pagination.page+1},search = ${search})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showEndPage}">
-                        <a href="@{/(page=${pagination.totalPage})}" aria-label="Next">
+                        <a th:href="@{/(page=${pagination.totalPage},search = ${search})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
@@ -77,9 +77,14 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>站长微信</h4>
+                <img class="img-thumbnail question-wechat" src="/images/img.png" >
+            </div>
         </div>
     </div>
+</div>
+<div th:insert="~{footer::foot}">
 </div>
 </body>
 </html>
