--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -16,9 +16,9 @@
                 <a class="navbar-brand" href="/">交流社区</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="搜索提问">
+                        <input type="text" class="form-control" name="search" placeholder="搜索提问">
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
@@ -35,7 +35,6 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的问题</a></li>
-                            <li><a href="#">个人资料</a></li>
                             <li><a href="/logout">退出登录</a></li>
 
                         </ul>
