--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,7 +26,7 @@
                         </a>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading" >
+                        <h4 class="media-heading">
                             <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
                         </h4>
                         <span class="text-desc">
@@ -44,7 +44,7 @@
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${section=='replies'}">
                 <div class="media" th:each="notification : ${pagination.data}">
                     <div class="media-body">
-                        <p class="media-heading" >
+                        <p class="media-heading">
                             <span th:text="${notification.notifierName+' '+notification.typeName+' '} "></span>
                             <a th:href="@{'/notification/'+${notification.id}}"
                                th:text="${notification.outerTitle}">
@@ -101,5 +101,7 @@
         </div>
     </div>
 </div>
+<div th:insert="~{footer :: foot}"></div>
+
 </body>
 </html>
